# WellD

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TROUBLESHOOTING.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.local.example
.claude/agents/: case-engineer.md  ci-engineer.md  docs-writer.md  firmware-engineer.md  pcb-engineer.md  senior-reviewer.md  test-engineer.md  z2m-converter.md
.claude/commands/: improve.md
.github/workflows/: build.yml
.opencode/: config.json
components/esp_log/: CMakeLists.txt
components/sensor/: CMakeLists.txt  Kconfig  idf_component.yml  sensor.c  sensor_pure.c
components/sensor/include/: sensor.h
components/welld_core/: CMakeLists.txt  welld_core.c
components/welld_core/include/: welld_core.h  welld_nvs.h
components/zigbee/: CMakeLists.txt  Kconfig  idf_component.yml  zigbee.c
components/zigbee/include/: zigbee.h
docs/: gen_wiring_diagram.py  wiring.md
hardware/: ASSEMBLY.md  README.md
hardware/case/: README.md  welld_case.scad  welld_gasket.stl
hardware/pcb/: alternatives_review_2026-07-15.md  bom.csv  bom_footprints.md  component_selection_review.md  component_verification_2026-07-14.md  design.md  fab_checklist.md  fab_notes.md  fp-lib-table  generate_gerbers.py  generate_kicad.py  interfaces.kicad_sch  jlcpcb_bom.csv  jlcpcb_cpl.csv  kicad_guide_eli5.md  kicad_place_script.py  kicad_wire_script.py  mcu.kicad_sch  netlist_check.py  netlist_check_output.txt  placement_constraints.md  power.kicad_sch  schematic_connections.md  senior_review_2026-05-25.md  senior_review_2026-07-06.md  sensors.kicad_sch  sym-lib-table  update_placements.py  welld.kicad_pcb  welld.kicad_pro  welld.kicad_sch  welld.kicad_sym  welld.net
hardware/pcb/WellD.pretty/: XT30PW-F_RightAngle.kicad_mod
hardware/pcb/gerbers/: welld-B_Cu.gbr  welld-B_Mask.gbr  welld-Edge_Cuts.gbr  welld-F_Cu.gbr  welld-F_Mask.gbr  welld-F_Paste.gbr  welld-F_SilkS.gbr  welld-NPTH.drl  welld-PTH.drl  welld-job.gbrjob
hardware/pcb_old/: design.md  generate_kicad.py  generate_kicad.py.bak  interfaces.kicad_sch  kicad_place.py  mcu.kicad_sch  pcbway_analysis.md  pcbway_assembly_instructions.md  pcbway_bom.csv  pcbway_cpl.csv  pcbway_verification.md  power.kicad_sch  sensors.kicad_sch  update_placements.py  welld-erc.json  welld.kicad_pcb  welld.kicad_pro  welld.kicad_sch  welld_netlist.xml
hardware/pcb_old/WellD.pretty/: XT30PW-F_RightAngle.kicad_mod
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  mqtt_pub.c  mqtt_pub.h  wifi.c  wifi.h
test/host/: CMakeLists.txt  test_sensor_pure.c  test_welld_core.c
test/host/stub_sdkconfig/: sdkconfig.h
test/sensor/: CMakeLists.txt  sdkconfig.defaults
test/sensor/main/: CMakeLists.txt  test_sensor.c
test/welld_core/: CMakeLists.txt  sdkconfig.defaults
test/welld_core/main/: CMakeLists.txt  test_welld_core.c
zigbee2mqtt/: package-lock.json  package.json  welld.js
zigbee2mqtt/lib/: welld_convert.js
zigbee2mqtt/test/: welld_convert.test.js
